# messenger-cli-server

./: .gitignore  CMakeLists.txt  README.md  main.c
data/: messages  messages.txt  users.txt
source/: AuthService.h  Init.c  ServerService.c  ServerService.h  TimeService.c  TimeService.h
source/Services/: AuthService.c  AuthService.h  ClientStruct.c  ClientStruct.h  DatabaseService.c  DatabaseService.h  ServerService.c  ServerService.h  TimeService.c  TimeService.h
